--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.5",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.8.0",
     "shelljs": "^0.8.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
